force-app/main/default/objects/RCI_Benchmark__c/RCI_Benchmark__c.object-meta.xml
<CustomObject>
    <label>RCI Benchmark</label>
    <nameField>
        <displayFormat>RCIB-{000000}</displayFormat>
        <label>RCI Benchmark</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCI Benchmark</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>