force-app/main/default/objects/RCI_Benchmark__c/fields/I_RS_FOR__c.field-meta.xml
<CustomField>
    <fullName>I_RS_FOR__c</fullName>
    <label>FOR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>