force-app/main/default/objects/RCI_Benchmark__c/fields/I_RS_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>