force-app/main/default/objects/RCI_Benchmark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_FOR__c</columns>
    <columns>I_RS_Year__c</columns>
    <columns>I_RS_World_Benchmark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>